--- a/server/.env
+++ b/server/.env
@@ -3,5 +3,5 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=commision
 DB_USER=postgres
-DB_PASSWORD=dyasmir
+DB_PASSWORD=password
 SECRET_KEY=raizhellann
